--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "gsap": "^3.13.0",
+    "lucide-react": "^0.535.0",
     "next": "15.3.5",
     "nodemailer": "^7.0.5",
     "react": "^19.0.0",
