--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-modal": "^3.16.3",
-    "react-toastify": "^11.0.5"
+    "react-toastify": "^11.0.5",
+    "sass": "^1.89.2"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
